# VMAssit

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirement.txt  test_main.py
backend/api/v1/routers/: classify.py  health.py
backend/core/: config.py  ner_flair.py  ocr.py  ocrmypdf_plugin.py  pydoctr.py  trocr_model.py
backend/schemas/: __init__.py  classify.py  error.py  health.py
frontend/: Dockerfile  app.py  pyproject.toml  requirement.txt
