[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Edwin Kayang <epkayang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.65.0"
xlsxwriter = "^3.1.2"
pandas = "^2.0.2"
requests = "^2.31.0"
streamlit = "1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
